--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8084
 
 bot.name=SportsSpiritBot
-bot.token=5878031791:AAGnmkpKSBotDau1uK1gPxsG8w8iP2wilLs
-bot.uri=https://687e-91-193-176-124.ngrok-free.app
+bot.token=
+bot.uri=
 
 server.ssl.enabled=false
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=userok
-spring.rabbitmq.password=p@ssw0rd
+spring.rabbitmq.username=
+spring.rabbitmq.password=
